# Tyche

./: .gitignore  README.md  pyproject.toml
configs/: backtest.yaml  base.yaml  data.yaml  strategy.yaml
docs/: architecture.md  research_process.md
docs/decisions/: 0001-repo-structure.md
research/: README.md
scripts/: build_features.py  download_data.py  ingest_all_bronze_ohlcv_to_silver.py  quick_visualize.py  run_backtest.py  run_constant_long.py
src/tyche/: __init__.py
src/tyche/backtest/: run.py
src/tyche/backtest/engine/: __init__.py  engine.py  types.py
src/tyche/backtest/reporting/: __init__.py  visualizer.py
src/tyche/cli/: main.py
src/tyche/strategies/baseline/: __init__.py  constant_weight.py
tests/: test_imports.py
tests/backtest/: test_engine.py
tests/integration/: README.md
tests/unit/: test_import.py
